--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>biz.asplund</groupId>
 	<artifactId>jcimd</artifactId>
-	<version>0.5.5-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<name>Java CIMD API</name>
